apps/monitoring/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 31900
